# voice-ai-reference-implementations

./: .env.shared.example  .gitignore  README.md  THIRD_PARTY_NOTICES.md  run-all-demos.sh
realtime-bedrock-nova2/: .env.example  README.md  pyproject.toml  run-all.sh  s2s_events.py  s2s_session_manager.py  server.py
realtime-bedrock-nova2/integration/: agent_core.py  bedrock_knowledge_bases.py
realtime-bedrock-nova2/ui/: package-lock.json
realtime-bedrock-nova2/ui/src/: s2s.css  s2s.js
realtime-livekit-nova2/: .env.example  README.md  agent.py  agent_with_tool.py  pyproject.toml  run-all.sh
realtime-livekit-nova2/ui/: .env.example  package-lock.json  package.json
realtime-livekit-nova2/ui/scripts/: prepare-livekit-env.sh
realtime-livekit-nova2/ui/src/: App.css  App.js
realtime-pipecat-nova2/: .env.example  README.md  bot.py  pipeline_task_factory.py  pyproject.toml  run-all.sh  server.py  server_utils.py
realtime-pipecat-nova2/ui/: README.md
realtime-pipecat-nova2/ui/src/: app.ts
voice-ai-poc/vs-voice-ai-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md  app.py  auth.py  launch.sh  pyproject.toml  routes.py  voice_routes.py
voice-ai-poc/vs-voice-ai-backend/assemblyai_speech_to_speech/: constants_assemblyai.py  websocket_assemblyai.py
voice-ai-poc/vs-voice-ai-backend/database/: __init__.py  init_database.py  manage_conversations.py  manage_users.py
voice-ai-poc/vs-voice-ai-backend/gemini_speech_to_speech/: constants_gemini.py  websocket_gemini.py
voice-ai-poc/vs-voice-ai-backend/novasonic_speech_to_speech/: __init__.py  constants_novasonic.py  websocket_novasonic.py
voice-ai-poc/vs-voice-ai-backend/openai_speech_to_speech/: constants_openai.py  websocket_gpt_realtime.py  websocket_openai.py
voice-ai-poc/vs-voice-ai-backend/scripts/: backup-cron  cron_backup.sh  docker-entrypoint.sh
voice-ai-poc/vs-voice-ai-backend/utils/: audio_processing.py  db_backup.py  (+4 more)
(+43 files in other folders)
